# aliens-ar-android

./: .gitignore  README.md  gradle.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/engine/private/input/: InputSystem.cpp
app/src/main/cpp/engine/private/metrics/: Logger.cpp
app/src/main/cpp/engine/private/render/: GLRenderer.cpp
app/src/main/cpp/engine/public/input/: AccelerometerData.hpp  InputSystem.hpp
app/src/main/cpp/engine/public/metrics/: Logger.hpp
app/src/main/cpp/engine/public/render/: GLRenderer.hpp
app/src/main/java/com/code4un/aliensar/: MainActivity.kt
