# = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
# CMAKE
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

# CMake Version
cmake_minimum_required(VERSION 3.19)

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
# PROJECT
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

project("Aliens-AR")

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
# BUILD
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

# Add SHARED Library Object
add_library(aliensar  SHARED  native-lib.cpp)

# Find Libraries
find_library(
    log-lib
    log )

# Link Libraries
target_link_libraries(
    aliensar
    ${log-lib} )

# = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =